// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI/UX engineer handoff template snapshots > UI/UX engineer to planner renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`planner\` agent **only** receives the text inside your \`handoff --next-role="planner"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (UI/UX Engineer → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. This is an advisory handback: do not implement code, edit files, spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the UI/UX engineer checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for complete user flows, loading/empty/error/success states, component ownership, theme tokens and layout, keyboard and accessibility behavior, responsive details, and UI tests.
- Name concrete repository paths, existing components/tokens, props/state/events, data boundaries, acceptance criteria, risks, and verification steps.

- Specify complete user flows with explicit loading, empty, error, success, disabled, and retry states where applicable.
- Define exact keyboard shortcuts, focus order, keyboard navigation, focus restoration, and accessible semantics and labels.
- Define component hierarchy and ownership, props/state/events, data boundaries, and interaction behavior.
- Choose concrete existing ShadCN components with the Base UI backend and lucide-react/react-icons conventions; do not write "use an appropriate component."
- Specify Tailwind utility classes or semantic theme-token classes for layout, spacing, sizing, typography, states, responsive behavior, and dark mode.
- Specify responsive breakpoints/layout behavior, visual feedback, destructive-action safeguards, exact files/components, and the UI/integration/accessibility test plan.

## Force Multipliers
<name the existing components, patterns, tokens, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/props, state/data/event boundaries, component hierarchy, and target Tailwind/theme-token snippet detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Component hierarchy, props/state/events, test structure, or exact
// Tailwind/theme-token classes. Enough detail that implementation requires no invention.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Shared contracts (planner-owned)
<list cross-file interfaces, component/data contracts, state boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared props, state, events, query shapes, or accessibility contracts.
\`\`\`

### Reference snippets
\`\`\`tsx
// Canonical component imports, hook usage, keyboard wiring, or layout examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact states, interactions, semantics, classes/tokens, and responsive behavior>
- Include UI, integration, and accessibility test coverage for the design's risk areas.
- Verify the implemented user-facing entry point end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not implement code or edit files as the UI/UX engineer; this handoff is advisory only.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent components, props, tokens, keyboard behavior, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and destructive-action/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="planner" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`UI/UX engineer handoff template snapshots > UI/UX engineer to solo renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`solo\` agent **only** receives the text inside your \`handoff --next-role="solo"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (UI/UX Engineer → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. This is an advisory handback: do not implement code, edit files, spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the UI/UX engineer checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for complete user flows, loading/empty/error/success states, component ownership, theme tokens and layout, keyboard and accessibility behavior, responsive details, and UI tests.
- Name concrete repository paths, existing components/tokens, props/state/events, data boundaries, acceptance criteria, risks, and verification steps.

- Specify complete user flows with explicit loading, empty, error, success, disabled, and retry states where applicable.
- Define exact keyboard shortcuts, focus order, keyboard navigation, focus restoration, and accessible semantics and labels.
- Define component hierarchy and ownership, props/state/events, data boundaries, and interaction behavior.
- Choose concrete existing ShadCN components with the Base UI backend and lucide-react/react-icons conventions; do not write "use an appropriate component."
- Specify Tailwind utility classes or semantic theme-token classes for layout, spacing, sizing, typography, states, responsive behavior, and dark mode.
- Specify responsive breakpoints/layout behavior, visual feedback, destructive-action safeguards, exact files/components, and the UI/integration/accessibility test plan.

## Force Multipliers
<name the existing components, patterns, tokens, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/props, state/data/event boundaries, component hierarchy, and target Tailwind/theme-token snippet detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Component hierarchy, props/state/events, test structure, or exact
// Tailwind/theme-token classes. Enough detail that implementation requires no invention.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Shared contracts (configured entry-point-owned)
<list cross-file interfaces, component/data contracts, state boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared props, state, events, query shapes, or accessibility contracts.
\`\`\`

### Reference snippets
\`\`\`tsx
// Canonical component imports, hook usage, keyboard wiring, or layout examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact states, interactions, semantics, classes/tokens, and responsive behavior>
- Include UI, integration, and accessibility test coverage for the design's risk areas.
- Verify the implemented user-facing entry point end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not implement code or edit files as the UI/UX engineer; this handoff is advisory only.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent components, props, tokens, keyboard behavior, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and destructive-action/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="solo" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`UI/UX engineer handoff template snapshots > entry point to UI/UX engineer renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`uiux-engineer\` agent **only** receives the text inside your \`handoff --next-role="uiux-engineer"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (planner → uiux-engineer)

The automatically injected \`<user-message>\` is the authoritative request. Add only concise context that the UI/UX Engineer needs to design within the existing repository and team scope.

Provide the request, relevant constraints, and the files or product surfaces that need inspection. Ask for one evidence-backed design focused on complete user flows, loading/empty/error/success states, component ownership, theme tokens and layout, keyboard and accessibility behavior, responsive details, and UI tests.

After completing the design, hand it back to \`planner\` with the normal handoff command. Stop after the successful handoff; do not implement the design or delegate further work.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="planner" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`UI/UX engineer handoff template snapshots > generic UI/UX engineer handback renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`<entry-point-role>\` agent **only** receives the text inside your \`handoff --next-role="<entry-point-role>"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (UI/UX Engineer → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. This is an advisory handback: do not implement code, edit files, spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the UI/UX engineer checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for complete user flows, loading/empty/error/success states, component ownership, theme tokens and layout, keyboard and accessibility behavior, responsive details, and UI tests.
- Name concrete repository paths, existing components/tokens, props/state/events, data boundaries, acceptance criteria, risks, and verification steps.

- Specify complete user flows with explicit loading, empty, error, success, disabled, and retry states where applicable.
- Define exact keyboard shortcuts, focus order, keyboard navigation, focus restoration, and accessible semantics and labels.
- Define component hierarchy and ownership, props/state/events, data boundaries, and interaction behavior.
- Choose concrete existing ShadCN components with the Base UI backend and lucide-react/react-icons conventions; do not write "use an appropriate component."
- Specify Tailwind utility classes or semantic theme-token classes for layout, spacing, sizing, typography, states, responsive behavior, and dark mode.
- Specify responsive breakpoints/layout behavior, visual feedback, destructive-action safeguards, exact files/components, and the UI/integration/accessibility test plan.

## Force Multipliers
<name the existing components, patterns, tokens, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/props, state/data/event boundaries, component hierarchy, and target Tailwind/theme-token snippet detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Component hierarchy, props/state/events, test structure, or exact
// Tailwind/theme-token classes. Enough detail that implementation requires no invention.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Shared contracts (configured entry-point-owned)
<list cross-file interfaces, component/data contracts, state boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared props, state, events, query shapes, or accessibility contracts.
\`\`\`

### Reference snippets
\`\`\`tsx
// Canonical component imports, hook usage, keyboard wiring, or layout examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact states, interactions, semantics, classes/tokens, and responsive behavior>
- Include UI, integration, and accessibility test coverage for the design's risk areas.
- Verify the implemented user-facing entry point end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not implement code or edit files as the UI/UX engineer; this handoff is advisory only.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent components, props, tokens, keyboard behavior, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and destructive-action/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop. Replace \`<entry-point-role>\` with the configured entry-point role before running it.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="<entry-point-role>" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;
